--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,11 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Snell版本 (如 4.0.1, 留空自动获取最新)'
+        description: 'Snell版本 (如 4.0.1, 留空自动获取)'
         required: false
         type: string
       debian_version:
-        description: 'Debian 标签 (默认 stable-slim)'
+        description: 'Debian 标签 (如 12-slim, stable-slim)'
         required: false
         default: 'stable-slim'
         type: string
@@ -35,53 +35,45 @@ jobs:
         id: debian
         run: echo "tag=${{ github.event.inputs.debian_version || 'stable-slim' }}" >> $GITHUB_OUTPUT
 
-      - name: 获取 Snell 官方版本 (带重试机制)
+      - name: 获取 Snell 官方版本 (带重试)
         id: version
         run: |
+          for i in {1..3}; do
+            VERSION=$(curl -fsSL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
+              | grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' \
+              | sort -V | tail -n1)
+            [ -n "$VERSION" ] && break || sleep 5
+          done
+          
           if [ -n "${{ github.event.inputs.version }}" ]; then
             V_INPUT="${{ github.event.inputs.version }}"
             echo "version=v${V_INPUT#v}" >> $GITHUB_OUTPUT
           else
-            # 重试 3 次获取版本
-            for i in {1..3}; do
-              VERSION=$(curl -fsSL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
-                | grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' \
-                | sort -V | tail -n1)
-              [ -n "$VERSION" ] && break || sleep 5
-            done
-            if [ -z "$VERSION" ]; then echo "获取官方版本失败" && exit 1; fi
+            [ -z "$VERSION" ] && exit 1
             echo "version=v$VERSION" >> $GITHUB_OUTPUT
           fi
 
-      - name: 获取 GHCR 现有最新版本
+      - name: 获取 GHCR 现有版本
         id: ghcr
         run: |
           TOKEN=$(curl -fsSL "https://ghcr.io/token?scope=repository:${{ github.repository_owner }}/snell:pull" | jq -r '.token // empty')
+          GHCR_V="v0.0.0"
           if [ -n "$TOKEN" ]; then
             GHCR_V=$(curl -fsSL -H "Authorization: Bearer $TOKEN" https://ghcr.io/v2/${{ github.repository_owner }}/snell/tags/list \
               | jq -r '.tags[]?' | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n1 || echo "v0.0.0")
-          else
-            GHCR_V="v0.0.0"
           fi
           echo "ghcr_version=$GHCR_V" >> $GITHUB_OUTPUT
 
-      - name: 判断是否需要构建
+      - name: 版本比对与决策
         id: decide
         run: |
           OFFICIAL="${{ steps.version.outputs.version }}"
           CURRENT="${{ steps.ghcr.outputs.ghcr_version }}"
-          echo "官方版本: $OFFICIAL, 当前版本: $CURRENT"
-          
           if [ "${{ github.event.inputs.force }}" = "true" ]; then
             echo "should_build=true" >> $GITHUB_OUTPUT
           elif [ "$OFFICIAL" != "$CURRENT" ]; then
-            # 只有当官方版本高于当前版本时才构建
             HIGHEST=$(printf '%s\n%s' "$OFFICIAL" "$CURRENT" | sort -V | tail -n1)
-            if [ "$HIGHEST" == "$OFFICIAL" ]; then
-              echo "should_build=true" >> $GITHUB_OUTPUT
-            else
-              echo "should_build=false" >> $GITHUB_OUTPUT
-            fi
+            [ "$HIGHEST" == "$OFFICIAL" ] && echo "should_build=true" >> $GITHUB_OUTPUT || echo "should_build=false" >> $GITHUB_OUTPUT
           else
             echo "should_build=false" >> $GITHUB_OUTPUT
           fi
@@ -105,6 +97,34 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to Docker Hub
+        if: secrets.DOCKER_HUB_TOKEN != ''
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: 自动创建 Docker Hub 仓库 (如果不存在)
+        if: secrets.DOCKER_HUB_TOKEN != ''
+        run: |
+          REPO_NAME="snell"
+          USER="${{ secrets.DOCKER_HUB_USERNAME }}"
+          TOKEN="${{ secrets.DOCKER_HUB_TOKEN }}"
+          
+          # 检查仓库是否存在
+          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -u "$USER:$TOKEN" "https://hub.docker.com/v2/repositories/$USER/$REPO_NAME/")
+          
+          if [ "$HTTP_STATUS" -eq 404 ]; then
+            echo "仓库 $USER/$REPO_NAME 不存在，正在创建..."
+            curl -s -X POST -u "$USER:$TOKEN" \
+              -H "Content-Type: application/json" \
+              -d "{\"name\":\"$REPO_NAME\",\"is_private\":false,\"description\":\"Snell Server Docker Image\"}" \
+              "https://hub.docker.com/v2/repositories/$USER/"
+            echo "仓库创建成功。"
+          else
+            echo "仓库 $USER/$REPO_NAME 已存在。"
+          fi
+
       - name: Build & Push
         uses: docker/build-push-action@v5
         with:
@@ -117,3 +137,5 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/snell:${{ needs.check-version.outputs.version }}
             ghcr.io/${{ github.repository_owner }}/snell:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.check-version.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/snell:latest
