--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,20 +98,20 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub
-        if: secrets.DOCKER_HUB_TOKEN != ''
+        # 修复：使用正确的 if 语法判断 secret 是否存在
+        if: "${{ secrets.DOCKER_HUB_TOKEN != '' }}"
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: 自动创建 Docker Hub 仓库 (如果不存在)
-        if: secrets.DOCKER_HUB_TOKEN != ''
+        if: "${{ secrets.DOCKER_HUB_TOKEN != '' }}"
         run: |
           REPO_NAME="snell"
           USER="${{ secrets.DOCKER_HUB_USERNAME }}"
           TOKEN="${{ secrets.DOCKER_HUB_TOKEN }}"
           
-          # 检查仓库是否存在
           HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -u "$USER:$TOKEN" "https://hub.docker.com/v2/repositories/$USER/$REPO_NAME/")
           
           if [ "$HTTP_STATUS" -eq 404 ]; then
@@ -120,7 +120,6 @@ jobs:
               -H "Content-Type: application/json" \
               -d "{\"name\":\"$REPO_NAME\",\"is_private\":false,\"description\":\"Snell Server Docker Image\"}" \
               "https://hub.docker.com/v2/repositories/$USER/"
-            echo "仓库创建成功。"
           else
             echo "仓库 $USER/$REPO_NAME 已存在。"
           fi
@@ -137,5 +136,5 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/snell:${{ needs.check-version.outputs.version }}
             ghcr.io/${{ github.repository_owner }}/snell:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/snell:${{ needs.check-version.outputs.version }}
-            ${{ secrets.DOCKER_HUB_USERNAME }}/snell:latest
+            ${{ secrets.DOCKER_HUB_USERNAME != '' && format('{0}/snell:{1}', secrets.DOCKER_HUB_USERNAME, needs.check-version.outputs.version) || '' }}
+            ${{ secrets.DOCKER_HUB_USERNAME != '' && format('{0}/snell:latest', secrets.DOCKER_HUB_USERNAME) || '' }}
