--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,15 +98,15 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub
-        # 修复：使用正确的 if 语法判断 secret 是否存在
-        if: "${{ secrets.DOCKER_HUB_TOKEN != '' }}"
+        # 修复：if 条件中 secret 的判断方式
+        if: github.repository_owner == '你的Github用户名' || secrets.DOCKER_HUB_TOKEN != ''
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: 自动创建 Docker Hub 仓库 (如果不存在)
-        if: "${{ secrets.DOCKER_HUB_TOKEN != '' }}"
+        if: secrets.DOCKER_HUB_TOKEN != ''
         run: |
           REPO_NAME="snell"
           USER="${{ secrets.DOCKER_HUB_USERNAME }}"
